packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_empty_sub_call_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      14,
      20
    ],
    "items": 6
  }
]
