packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_empty_sub_eof_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      4
    ],
    "items": 2
  }
]
