packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_empty_sub_paren_eof_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      7
    ],
    "items": 5
  }
]
