packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_empty_sub_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      14,
      17
    ],
    "items": 4
  }
]
