packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_empty_sup_align_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      9
    ],
    "items": 3
  }
]
