packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_good_then_broken_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      12
    ],
    "items": 6
  },
  {
    "range": [
      16,
      23
    ],
    "items": 4
  }
]
