packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_recovered_page_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      17
    ],
    "items": 4
  },
  {
    "range": [
      21,
      43
    ],
    "items": 4
  }
]
