packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_after_heading_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      12,
      19
    ],
    "items": 4
  }
]
