packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_before_list_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      8
    ],
    "items": 4
  }
]
