packages/wasm/src/tests/snapshots/wasm__tests__tooltip__broken_unclosed_dollar_eof_tooltips.snap
---
source: packages/wasm/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      15,
      21
    ],
    "items": 4
  }
]
